--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 127.0.0.1",
     "dev:backend": "bun backend/server.ts",
     "build": "tsc -b && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host 127.0.0.1",
     "test": "bun test"
   },
   "devDependencies": {
+    "bun-types": "^1.3.3",
     "typescript": "^5.9.2",
-    "vite": "^7.1.3"
+    "vite": "^7.3.1",
+    "vite-plugin-solid": "^2.11.10"
+  },
+  "dependencies": {
+    "solid-js": "^1.9.11"
   }
 }
