--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,12 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "moduleResolution": "Bundler",
+    "types": ["bun-types"],
     "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "noEmit": true,
     "strict": true,
     "noUnusedLocals": true,
