--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite-plugin-solid": "^2.11.10"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.4",
     "solid-js": "^1.9.11",
     "web-push": "^3.6.7"
   }
